--- a/package.json
+++ b/package.json
@@ -1,37 +1,42 @@
 {
-  "_from": "eslint-plugin-travel-planet",
-  "_id": "eslint-plugin-travel-planet@1.0.1",
-  "_spec": "eslint-plugin-travel-planet",
-  "bugs": {
-    "url": "https://github.com/4nds/eslint-plugin-travel-planet/issues"
-  },
-  "bundleDependencies": false,
-  "dependencies": {
-    "eslint": "^8.25.0"
-  },
-  "deprecated": false,
-  "description": "A plugin for the ESLint linter that adds more naming conventions for variables and functions.",
-  "homepage": "https://github.com/4nds/eslint-plugin-travel-planet/",
-  "keywords": [
-    "eslint",
-    "eslint-plugin",
-    "snake-case",
-    "snakecase",
-    "snake_case",
-    "underscore-case",
-    "underscore_case",
-    "upper-camel-case",
-    "upper-camelcase"
-  ],
-  "license": "ISC",
-  "main": "Source/Index.js",
-  "name": "eslint-plugin-travel-planet",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/4nds/eslint-plugin-travel-planet.git"
-  },
-  "scripts": {
-    "test": "eslint Source"
-  },
-  "version": "1.0.1"
+    "_from": "eslint-plugin-travel-planet",
+    "_id": "eslint-plugin-travel-planet@1.0.1",
+    "_spec": "eslint-plugin-travel-planet",
+    "bugs": {
+        "url": "https://github.com/4nds/eslint-plugin-travel-planet/issues"
+    },
+    "bundleDependencies": [],
+    "dependencies": {
+        "eslint": "^8.25.0"
+    },
+    "deprecated": false,
+    "description": "A plugin for the ESLint linter that adds more naming conventions for variables and functions.",
+    "homepage": "https://github.com/4nds/eslint-plugin-travel-planet/",
+    "keywords": [
+        "eslint",
+        "eslint-plugin",
+        "snake-case",
+        "snakecase",
+        "snake_case",
+        "underscore-case",
+        "underscore_case",
+        "upper-camel-case",
+        "upper-camelcase"
+    ],
+    "license": "ISC",
+    "main": "Source/Index.js",
+    "name": "eslint-plugin-travel-planet",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/4nds/eslint-plugin-travel-planet.git"
+    },
+    "scripts": {
+        "setup_test": "cd tests && npm install ../",
+        "run_test": "eslint tests",
+        "test": "npm run setup_test && npm run run_test"
+    },
+    "version": "1.0.1",
+    "devDependencies": {
+        "eslint-plugin-jsdoc": "^39.3.6"
+    }
 }
